versioned_docs/version-1.0.19/21-release-history/1.0.18.0.md
---
title: "1.0.18.0"
sidebar_label: "1.0.18.0"
---
**发布时间：2026-05-17**

## 亮点

1. 子事件：分析的事件窗口配置新增多个触发器条件，每个触发器可以生成独的子事件，按严重级别依次触发；事件列表与详情页均进行了更新，携带了更多事件信息，并可以看到父子事件关联。
1. 模型开发与管理：过程分析新增机器学习模型的开发与管理模块，覆盖机器学习模型的全生命周期，从模型配置、训练、评估、注册、部署、到模型上线后评估。
1. 安全与权限管理：日志增加更细粒度的配置管理，支持针对不同对象配置不同的管理权限；许可管理支持新的ESC许可体系。

## 特性

1. Analyze Panel 增加数据解读功能，支持事件分析与标记展示。
1. 元素模板列表页新增批量导入限值功能，快速完成配置。
1. 事件详情页面现已增加关联属性的显示，便于快速查看上下文信息。
1. 相关分析增加 P 值。
1. 管理后台新增许可证管理功能，支持统一查看与配置。
1. 饼图与条形图现已支持完整的配置项。
1. 表格面板现已支持完整的配置项。
1. 事件分组列表支持保存为面板。
1. 版本控制现已支持版本发布模式。
1. 版本控制现已支持 GitLab，方便与主流代码仓库集成。
1. 新增用户 API Key 管理能力（支持创建、列表、复制、修改到期时间和删除）。
1. AI 问答会话删除与重命名操作新增审计记录。
1. 分析面板现支持选择事件模板，快速应用预定义配置。
1. 支持在 Analyze Panel 中使用 Insight Panel，基于面板数据与关联事件生成 AI 解读。
1. 事件列表页面现已支持事件导入，方便批量添加。
1. 分析现支持输出结果过滤，分析模板同时支持分组输出。
1. 表达式功能增强，现已支持 CASE WHEN 语句中现已支持使用 BETWEEN ... AND ... 进行范围判断。
1. 面板现支持按系列单独配置，满足个性化展示需求。
1. 面板新增直方图类型，帮助您快速分析数据分布情况。
1. 搜索支持正则表达式。
1. 事件窗口分析现支持一级子事件。
1. 组态面板新增引用普通面板功能。
1. Excel 插件中的 EAI 图标无法加载，但功能本身可用，不影响操作。

## 优化

1. 优化 AI 检查连接失败报错信息。
1. 优化分析面板操作按钮布局，提升操作便捷性。
1. 分析面板中未结束的事件将自动显示当前时间。
1. 审计操作权限现可灵活配置。
1. 优化事件主菜单中的事件详情页面布局与交互，提升信息查看效率。
1. 操作日志中的“原因”字段默认可不填，无需用户输入。
1. 优化面板与仪表板模板中过滤元素的操作体验，交互更直观。
1. 优化分析面板事件列表中未完成事件的显示效果。
1. 分析面板中的事件已支持展示基本信息和事件属性。
1. 枚举类型属性现显示其值对应的字符串，而非枚举名称，便于直观理解。
1. 模板创建的元素属性默认为非实例化。
1. 元素模板的页面缓存机制，提升页面加载与切换效率。
1. 页面区域的滚动条只有鼠标在该区域才显示。
1. 事件通知内容现支持传入更多参数，便于灵活扩展通知信息。
1. 事件通知的标题支持自定义，方便快速识别与区分。
1. 分析功能新增历史事件生成，同时计算窗口支持滑动计数。
1. 优化根因分析报告的处理流程、输出内容及源码。
1. 优化用户个人信息页面布局，减少底部无效空白，页面更紧凑。
1. 状态图与状态历史图现已支持完整的图形配置。
1. 散点图现支持对来自两个元素的指标进行时间戳对齐，确保数据点正确匹配。
1. 生成样例数据库时，采用“先检查后创建”的逻辑，避免直接删除已有数据。
1. 修复 Xinference LLM 服务的 HTTP/2 兼容性问题，强制使用 HTTP/1.1 协议。
1. 修复根因分析中 report ID 缺失导致的报错，并优化 LangGraph 入口与中间文件路径。
1. 优化 AI 问答超时逻辑。
1. 操作日志导出支持按时间范围筛选，灵活获取所需记录。
1. 优化 AI 分析超时处理，避免数据解读继续追问时根因分析失败。
1. 智能问数分析生成逻辑错误，优化窗口设置和提示词，修复 PDF 图片输出与时区对齐问题。

## 修复

1. 仪表板中的面板在自动刷新时偶现闪烁。
1. 使用简单导入时出错。
1. 页面发生 HTTP 401 错误时未自动跳转至登录页，影响使用体验。
1. AI 创建事件窗口分析时强制必须输出属性的问题。
1. 统计值面板现已支持显示字符串类型的属性值。
1. 分析面板数据显示不完整，可能影响分析结果的准确性。
1. 面板打开为分析面板时不显示数据。
1. 西班牙语和韩语环境下，邮件通知的发件人（From）名称仍显示为中文，未实现本地化。
1. 公式表达式不支持引用 Timestamp 属性。
1. 趋势图自动降采样功能存在异常，影响数据展示效果。
1. 布尔类型属性的默认值应为布尔值，而非字符串。
1. 搜索结果准确率不足。
1. AI 问答在无数据时不再短暂显示错误的 No Data Available 页面。
1. 属性限制未与模板设置同步。
1. 文件事务一致性存在缺陷，可能导致数据不一致。
1. 低分辨率下，事件详情页面的属性标签页偶现无法显示。
1. 异常检测关键字分类错误导致创建失败。
1. 面板中补全的数据无法保存。
1. 修正双时间窗对比查询 SQL 条件优先级错误，并修复结果输出与 i18n 问题。
1. IDMP 流计算生成错误，支持计数窗口方式生成SQL。
1. 并发修改属性模板时，可能引发数据不一致问题。
1. 使用两个元素的不同指标创建的散点图无法显示数据。
1. 使用元素聚合时，面板编辑功能存在异常。
1. AI 聊天路由将时间范围+聚合指标值查询错误归类为元数据查询的问题。
1. 分析触发的事件通知未遵循通知规则中配置的严重程度。
1. 组态面板编辑页面中，部分帮助文档链接存在错误。
1. 权限组已移除外部表相关权限。
1. AI Chat 路由错误导致容器持续重启。
1. 根因分析SQL查询超时导致"根因分析"功能卡住无法生成最终报告的问题。
1. 通过 MCP 创建的面板标题显示异常，无法正确渲染。
1. 系统初始化选择西班牙语后，管理后台的基本配置页面未正常切换语言，仍显示中文。
1. 在分析面板中，使用未显示的属性进行窗口切分会导致报错。
1. 为分析的输出源数据添加过滤条件后，可能导致分析运行异常。
1. 相似度分析结果存在重叠，影响结果区分度。
1. AI 连接因使用自签名证书触发 PKIX 证书验证错误。
1. 组态面板数据未随仪表板所选时间范围联动更新。
1. 将分析保存为模板时，新增的属性未能正确更新数据引用。
1. 分析面板数据解读在暗黑主题下文字对比度低、不可读的问题。
1. 分析面板启用预测后，因输入行数过多触发错误提示。
1. 在分析面板中添加两个指标后，若关闭多泳道模式，则仅显示一个指标。
1. 散点图提示信息中的横坐标现已支持时间显示。
1. 分析面板开启多泳道模式后，最多支持显示6个属性，超出部分无法展示。
1. 仪表板名称为空时，保存按钮未自动禁用，可能导致无效保存。
1. 简单导入时，新增子表未在已有根元素下添加子元素，而是错误地创建了新的根元素。
1. OPC-UA 导入后会生成多个无用的虚拟超级表，影响数据组织效率。
1. 异常检测分析创建中，若输出属性配置不正确，将导致 SQL 语法错误。
1. 事件窗口触发条件中的“True For”现已支持使用计数参数，可按次数灵活设置触发条件。
1. 官方安装文档已补充 Explorer URL 相关说明，便于正确配置访问地址。
1. 组态面板打开与编辑速度缓慢，存在性能问题。
1. 组态面板在编辑状态下退出时，未正确弹出保存确认对话框。
1. 组态面板中引用的面板未跟随全局时间选择器刷新，导致数据未与所选时间范围同步。
1. 组态面板编辑页面加载图元耗时较长，影响编辑效率。
1. 组态面板中图元的实时指标值无法正常刷新。
1. 问答生成分析窗口选择错误。
1. 解决了内网环境下无法使用 EAI 的问题。
1. 修复组态面板首次加载时页面布局异常，页脚与页眉重叠的问题。
1. 兼容 Azure OpenAI 代理接口，支持 api-version 并移除不兼容参数。
1. 日志中的 LLM/API Key 脱敏处理。
1. 公式属性中，包含 FILL_FORWARD 函数的复杂表达式无法正确获取计算结果。
1. 内网注册时，注册码未记录到日志，导致无法回溯查看。
1. 数据写入页面的过滤配置条件显示异常，无法正确渲染与查看。
